I4V3T7: Most test cases fail with Oracle JDK